<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_app"
    android:padding="10dip" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/login_title"
            android:textAppearance="?android:attr/textAppearanceLarge" android:layout_marginLeft="20dip" android:layout_marginBottom="5dip"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_form"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/login_result"
                android:text="@string/login_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#912752" />

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/login_username_title" />

            <EditText
                android:id="@+id/login_username"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/login_password_title" />

            <EditText
                android:id="@+id/login_password"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:password="true" />

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="8dp" >

                <Button
                    android:id="@+id/login_login"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/button"
                    android:padding="10.0dip"
                    android:text="@string/login_signin"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/ckRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/login_remember" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="7dip"
                android:paddingTop="8dip" >

                <Button
                    android:id="@+id/login_signup"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/button"
                    android:padding="10.0dip"
                    android:text="@string/login_signup"
                    android:textStyle="bold" />

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:paddingBottom="10.0dip"
                    android:paddingTop="10.0dip"
                    android:text="@string/login_sign_up_here" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>